# google-cloud-cpp

./: .bazelrc  .clang-tidy  .generator-googleapis-commit-hash  .travis.yml  BUILD  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  README.md  compile_commands.json
bazel/: google_cloud_cpp_deps.bzl
ci/: check-abi.sh  check-generated-code-hash.sh  check-spelling.sh  check-style.sh  coverity-scan.sh  cspell.json  define-example-runner.sh  install-retry.sh
ci/benchmarks/: Dockerfile
ci/cloudbuild/: cloudbuild.yaml
ci/cloudbuild/builds/: integration.sh
ci/cloudbuild/dockerfiles/: fedora-34.Dockerfile
ci/etc/: generator-golden-md5-hashes.md5  generator-googleapis-commit-hash.sh  quickstart-config.sh
ci/generate-markdown/: generate-packaging.sh  generate-readme.sh
ci/kokoro/: cache-functions.sh
ci/kokoro/docker/: Dockerfile.fedora  Dockerfile.fedora-install  Dockerfile.fedora-libcxx-msan  Dockerfile.ubuntu  Dockerfile.ubuntu-install  build-in-docker-bazel.sh  build-in-docker-cmake.sh  build.sh  download-cache.sh
ci/kokoro/install/: Dockerfile.centos  Dockerfile.centos-7  Dockerfile.centos-8  Dockerfile.debian  Dockerfile.debian-buster  Dockerfile.debian-stretch  Dockerfile.fedora  Dockerfile.opensuse  Dockerfile.opensuse-leap  Dockerfile.opensuse-tumbleweed  Dockerfile.ubuntu  Dockerfile.ubuntu-bionic  Dockerfile.ubuntu-focal  Dockerfile.ubuntu-trusty  Dockerfile.ubuntu-xenial  build.sh
ci/kokoro/macos/: build-cmake.sh  build-quickstart-cmake.sh  build.sh
ci/kokoro/ubuntu/: build.sh
ci/kokoro/windows/: build-bazel.ps1  build-project.ps1  build-quickstart-bazel.ps1  build.bat  install-dependencies.ps1
ci/test-abi/: google_cloud_cpp_common.expected.abi.dump
ci/test-readme/: Dockerfile.centos  Dockerfile.debian  Dockerfile.fedora  Dockerfile.opensuse  Dockerfile.opensuse-leap  Dockerfile.ubuntu  Dockerfile.ubuntu-trusty  Dockerfile.ubuntu-xenial  dockerfile2markdown.sh
ci/travis/: Dockerfile.ubuntu-install  build-docker.sh  build-linux.sh  dump-reports.sh  install-linux.sh  upload-codecov.sh  upload-docs.sh
ci/verify_current_targets/: CMakeLists.txt
cmake/: CMakeLists.googleapis.cmake  CompileProtos.cmake  CreateBazelConfig.cmake  FindProtobufTargets.cmake  FindgRPC.cmake  FixProtobufTargets.cmake  GoogleCloudCppCommon.cmake  IncludeGrpc.cmake
doc/: packaging.md
doc/contributor/: howto-guide-setup-development-workstation.md
generator/: CMakeLists.txt  generate-libraries.sh
generator/integration_tests/golden/: BUILD  CMakeLists.txt  golden_kitchen_sink_connection.gcpcxx.pb.h  golden_thing_admin_connection.gcpcxx.pb.h
generator/internal/: connection_generator.cc  descriptor_utils.cc  descriptor_utils_test.cc  predicate_utils.h  predicate_utils_test.cc  stub_factory_generator.cc
google/cloud/: CMakeLists.txt  completion_queue.h  completion_queue_test.cc  connection_options.h  connection_options_test.cc  google_cloud_cpp_common.bzl  log.cc  log.h  status.h  status_or_test.cc
google/cloud/bigquery/: BUILD  CMakeLists.txt  big_query_read_connection.gcpcxx.pb.h  bigquery_client_testing.bzl  version_info.h
google/cloud/bigtable/: CMakeLists.txt  admin_client.cc  admin_client.h  async_list_clusters_test.cc  async_list_instances_test.cc  async_read_stream_test.cc  async_row_reader.h  async_row_reader_test.cc  bigtable_client.bzl  bigtable_client_unit_tests.bzl  cell.h  cell_test.cc  client_options.cc  client_options.h  client_options_test.cc  completion_queue.h  completion_queue_test.cc  config.cmake.in  data_client.cc  data_client.h  filters.h  instance_admin.cc  instance_admin.h  instance_admin_client.cc  instance_admin_client.h  instance_admin_test.cc  metadata_update_policy.cc  mutation_batcher.cc  mutation_batcher.h  mutation_batcher_test.cc  mutations.cc  mutations.h  mutations_test.cc  options.h  polling_policy.h  polling_policy_test.cc  row.h  row_reader.cc  row_reader_test.cc  row_set.h  (+14 more)
google/cloud/ci/: run_integration_tests.sh
google/cloud/examples/: CMakeLists.txt
google/cloud/firestore/: CMakeLists.txt  field_path.cc
google/cloud/gax/: CMakeLists.txt  config.cmake.in  gax_cpp.bzl  gax_cpp_unit_tests.bzl  grpc_error_delegate.cc  grpc_error_delegate.h  grpc_error_delegate_test.cc  version.cc  version.h  version_info.h  version_info.h.in
google/cloud/grpc/: CMakeLists.txt  grpc_error_delegate.h  grpc_error_delegate_test.cc  version.h  version_info.h  version_info.h.in
google/cloud/grpc_wrappers/: CMakeLists.txt  config.cmake.in  grpc_error_delegate.cc  grpc_error_delegate.h  grpc_error_delegate_test.cc  grpc_wrappers.bzl  grpc_wrappers_unit_tests.bzl  version.cc  version.h  version_info.h  version_info.h.in
google/cloud/iam/: README.md  iam_credentials_connection.gcpcxx.pb.h
google/cloud/internal/: async_connection_ready_test.cc  async_retry_loop.h  async_retry_loop_test.cc  async_retry_unary_rpc_test.cc  completion_queue_impl.h  default_completion_queue_impl.cc  default_completion_queue_impl.h  format_time_point.cc  grpc_impersonate_service_account_integration_test.cc  parse_rfc3339.cc  retry_loop.h  retry_loop_test.cc  retry_policy.h  strerror.cc  tuple_test.cc
google/cloud/logging/: logging_service_v2_connection.gcpcxx.pb.h
google/cloud/pubsub/: CMakeLists.txt  publisher_connection.h  pubsub_client.bzl  pubsub_client_unit_tests.bzl  subscription_admin_connection.cc  topic_admin_connection.cc
google/cloud/spanner/: database_admin_connection.cc  database_admin_connection_test.cc  instance_admin_connection.cc  instance_admin_connection_test.cc  session_pool_options.h  value.h  value_test.cc
google/cloud/storage/: BUILD  CMakeLists.txt  bucket_metadata.cc  bucket_metadata.h  bucket_metadata_test.cc  bucket_test.cc  client.cc  client.h  client_bucket_acl_test.cc  client_options.cc  client_options.h  client_options_test.cc  client_sign_policy_document_test.cc  client_write_object_test.cc  download_options.h  grpc_resumable_upload_session_url.proto  hashing_options.h  iam_policy.cc  idempotency_policy.cc  idempotency_policy.h  idempotency_policy_test.cc  lifecycle_rule.cc  lifecycle_rule.h  list_objects_reader.h  (+23 more)
(+239 files in other folders)
